source/blender/compositor/operations/COM_MovieClipOperation.cpp
@@ -103,10 +103,10 @@ void MovieClipBaseOperation::executePixelSampled(float output[4], float x, float
 				nearest_interpolation_color(ibuf, NULL, output, x, y);
 				break;
 			case COM_PS_BILINEAR:
-				bilinear_interpolation_color(ibuf, NULL, output, x, y);
+				bilinear_interpolation_color(ibuf, NULL, output, x - 0.5f, y - 0.5f);
 				break;
 			case COM_PS_BICUBIC:
-				bicubic_interpolation_color(ibuf, NULL, output, x, y);
+				bicubic_interpolation_color(ibuf, NULL, output, x - 0.5f, y - 0.5f);
 				break;
 		}
 	}
